# TrajOpt_Service

./: .gitignore  README.md
.metadata/.plugins/org.eclipse.cdt.core/: Ai.1417751085161.pdom
.metadata/.plugins/org.eclipse.core.resources/.projects/Ai/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/Ai/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/Ai/.indexes/c4/15/e4/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.drc-ocu2_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.drc-ocu2_0/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.drc-ocu2_0/H.local_16/: node.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workbench.xml  workingsets.xml
initial_trajectory/: CMakeLists.txt  package.xml
initial_trajectory/include/initial_trajectory/: BezierAtlasIKDB.h  BezierQuadraticGenerator.h  DimQuadraticGenerator.h  GuessGenerator.h
initial_trajectory/src/: BezierAtlasIKDB.cpp  BezierQuadraticGenerator.cpp  DimQuadraticGenerator.cpp  demo.cpp  testDB.cpp
network/: CMakeLists.txt  artificial_neural_net.cpp  artificial_neural_net.h  core  network  package.xml  trainNetwork.cpp  useNetwork.cpp
openrave_env_generator/: CMakeLists.txt  package.xml
openrave_env_generator/include/openrave_env_generator/: EGLoader.h  EGTable.h  EGWall.h  EnvironmentGenerator.h  SaveLaserData.h  Utils.h  demo_laser.h
openrave_env_generator/src/: EGLoader.cpp  EGTable.cpp  EGWall.cpp  SaveLaserData.cpp  demo.cpp  demo_laser.cpp
pcd_to_voxel_grid/: CMakeLists.txt  package.xml
pcd_to_voxel_grid/src/: pcd_read.cpp  pcd_voxel.cpp
training_data_generator/: CMakeLists.txt  package.xml
training_data_generator/include/training_data_generator/: DatabaseTrajectorySearch.h
training_data_generator/src/: BuildDatabase.cpp  BuildDatabase1.cpp  DatabaseTrajectorySearch.cpp  testDTS.cpp
(+1 files in other folders)
